--- a/Home/templates/home/H_page.html
+++ b/Home/templates/home/H_page.html
@@ -154,10 +154,10 @@
                             </a>
                             <div class="flex items-center gap-x-1 lg:gap-x-3">
                                 <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
-                                    {{ item.discount_price|floatformat:0 | intcomma:False }}
+                                    {{ item.get_discount_price|floatformat:0 | intcomma:False }}
                                     <span class="font-Dana text-sm">تومان</span>
                                 </p>
-                                {% if item.price > item.discount_price %}
+                                {% if item.discount_percent > 0 %}
                                     <del class="font-Dana text-xs lg:text-sm text-rose-300 hidden lg:inline">
                                         {{ item.price|floatformat:0 | intcomma:False }}
                                         <span class="">تومان</span>
@@ -220,10 +220,10 @@
                             </a>
                             <div class="flex items-center gap-x-1 lg:gap-x-3">
                                 <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
-                                    {{ product.discount_price|floatformat:0 | intcomma:False }}
+                                    {{ product.get_discount_price|floatformat:0 | intcomma:False }}
                                     <span class="font-Dana text-sm">تومان</span>
                                 </p>
-                                {% if product.price > product.discount_price %}
+                                {% if product.discount_percent > 0 %}
                                     <del class="font-Dana text-xs lg:text-sm text-rose-300 hidden lg:inline">
                                         {{ product.price|floatformat:0 | intcomma:False }}
                                         <span class="">تومان</span>
