--- a/Account/templates/account/login.html
+++ b/Account/templates/account/login.html
@@ -150,7 +150,7 @@
             {% endfor %}
         </div>
 
-        <button type="submit">ثبت نام</button>
+        <button type="submit">ورود</button>
     </form>
     <div class="form-section">
         <p> حساب ندارید؟ <a href="{% url 'account:register' %}">ثبت نام کنید</a></p>
