--- a/Account/templates/account/register.html
+++ b/Account/templates/account/register.html
@@ -130,6 +130,7 @@
 <div class="form-box">
     <form class="form" method="post" dir="rtl">
         {% csrf_token %}
+{#        <input type="hidden" name="next" value="{{ next }}">#}
         <span class="title">ایجاد حساب کاربری</span>
         <div class="form-container" dir="rtl">
 
