--- a/Account/templates/account/login.html
+++ b/Account/templates/account/login.html
@@ -138,8 +138,8 @@
         {% endif %}
 
         <div class="form-container" dir="rtl">
-            {{ form.phone }}
-            {% for error in form.phone.errors %}
+            {{ form.username }}
+            {% for error in form.username.errors %}
                 <div class="error-message">{{ error }}</div>
             {% endfor %}
 
